# astoria_monitor

./: .env.example  .gitignore  CHANGELOG.md  README.md  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: agent.py  auth.py  dashboard.py
backend/app/static/: app.css  app.js
backend/app/templates/: _assets_table.html  alerts.html  base.html  dashboard.html  inventory.html  login.html  module_table.html  not_found.html  reports.html  station_detail.html  users.html
docs/: ad_gpo_agent_deployment.md
migrations/: env.py
migrations/versions/: 20260722_0001_initial_schema.py  20260723_0002_assets_inventory_schema.py
scripts/: init_db.ps1  install_agent_gpo.ps1  run_dev.ps1  seed_assets_from_excel.ps1  seed_assets_from_excel.py  send_heartbeat.ps1
tests/: test_agent_api.py
